myK8S/wallos/wallos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallos-service
  namespace: personal
spec:
  type: ClusterIP
  selector:
    app: wallos
  ports:
    - name: http
      port: 80
      targetPort: 80
